[package]
name = "wt-toolkit"
version = "0.0.0"
description = "A Tauri App"
authors = ["axiangcoding@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "window-create",
    "window-show",
    "window-start-dragging",
    "fs-all",
    "path-all",
    "dialog-open",
    "shell-open",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6.0"
zip = "2.1.3"
tempfile = "3"
walkdir = "2.5.0"
log = "0.4.21"
fs_extra = "1.3.0"
env_logger = "0.11.3"
simplelog = "0.12.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
